fix small alignment issue in bitbucket widget

--- a/widgets/bitbucket/bitbucket.styl
+++ b/widgets/bitbucket/bitbucket.styl
@@ -32,9 +32,6 @@
         font-size 1.5em
         font-weight bold
 
-        .pull-requests-item-content-ticket-id
-          color white
-
       .pull-requests-item-content-branch
         margin-top -0.4em
         overflow hidden
@@ -42,6 +39,7 @@
         text-overflow ellipsis
         display flex
         flex-direction row
+        align-items center
 
         font-size 1em
         font-weight normal
